# code-practice

./: .gitignore  LICENSE  README.md  ruff.toml
2022/advent-of-code/python/: dayXX.py  pyproject.toml
2022/advent-of-code/python/src/aoc/: advent_of_code.py  common.py  day02.py  day05.py  day06.py  day07.py  day08.py  test_day01.py
2022/advent-of-code/python/src/aoc/inputs/: day_99.txt
2022/advent-of-code/python/src/aoc/test/: test_common.py  test_day02.py  test_day03.py  test_day04.py  test_day06.py
adventofcode/2022/: README.md
adventofcode/2024/python/: .envrc  .pydocstyle.ini  Makefile  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml
adventofcode/2024/python/src/aoc/: advent_of_code.py  common.py  day01.py  day02.py  day03.py  day04.py
adventofcode/2024/python/test/: test_day01.py  test_day02.py  test_day03.py  test_day04.py
dailycodingproblem/: problem_11.py  problem_14.py  problem_18.py  problem_26.py  problem_27.py  problem_35.py
dailycodingproblem/52/: solution.py
leetcode/: .envrc  .pydocstyle.ini  mypy.ini  pyrightconfig.json  ruff.toml  solution.py  stub.py
leetcode/0027_remove_element/: solution.py
leetcode/0045_jump_game_2/: solution.py
leetcode/0055_jump_game/: solution.py
leetcode/0067_add_binary/: solution.py
leetcode/0069_sqrt/: solution.py
leetcode/0070_climbing_stairs/: solution.py
leetcode/0080_remove_duplicates_from_sorted_array_2/: solution.py
leetcode/0083_remove_dupes_sorted_list/: solution.py
leetcode/0088_merge_sorted_array/: solution.py
leetcode/0094_bin_tree_inorder_traversal/: solution.py
leetcode/0100_same_tree/: solution.py
leetcode/0101_symmetric_tree/: solution.py
leetcode/0104_max_depth_bin_tree/: solution.py
leetcode/0121_best_time_to_sell_stock/: solution.py
leetcode/0122_best_time_to_sell_stock_2/: solution.py
leetcode/0125_valid_palindrome/: solution.py
leetcode/0151_reverse_words_in_string/: solution.py
leetcode/0169_majority_element/: solution.py
leetcode/0179_largest_number/: solution.py
leetcode/0189_rotate_array/: solution.py
leetcode/0191_number_of_1_bits/: solution.py
leetcode/0238_product_array_except_self/: solution.py
leetcode/0242_valid_anagram/: solution.py
leetcode/0283_move_zeroes/: solution.py
leetcode/0334_increasing_triplet_subseq/: solution.py
leetcode/0345_reverse_vowels_string/: solution.py
leetcode/0389_find_diff/: solution.py
leetcode/0392_is_subsequence/: solution.py
leetcode/0461_hamming_distance/: solution.py
leetcode/0482_license_key_format/: solution.py
leetcode/0485_max_consec_ones/: solution.py
leetcode/0509_fib_number/: solution.py
leetcode/0520_detect_capital/: solution.py
leetcode/0541_rev_string_2/: solution.py
leetcode/0605_can_place_flowers/: solution.py
linter-confs/: mypy.ini  pyrightconfig.json  ruff.toml
(+45 files in other folders)
