[tool.poetry]
name="advent-of-code-2022-solutions"
version="0.1.0"
description="Code related to the advent of code programming tasks for 2022."
authors=["George Pickering <bigpick>"]
packages=[ { include="aoc", from="src" } ]
include=[ { path = "src", format = "sdist" } ]
exclude = ["**/test/*"]

[tool.poetry.dev-dependencies]
pylint = "*"
black = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.dependencies]
python = ">=3.10.8,<4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '--cov-report term-missing --cov=aoc -s'
python_files = "*test*.py"
# markers = [
#     "integration: marks tests that have external dependencies (deselect with \"-m 'not integration'\")",
# ]
log_cli = true
log_cli_level = "DEBUG"

[tool.black]
line-length = 100
include = '\.py$|.*scripts/python/.*$'
extend-exclude = '''
^/(
  (
      generated
    | .venv
    | .pipenv
    | thriftgen
    | .*\.pyi$
  )/
)
'''

[tool.poetry.scripts]
run-all-days = "aoc.advent_of_code:main"
day1 = "aoc.day01:main"
day2 = "aoc.day02:main"
day3 = "aoc.day03:main"

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.11"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = [
    'thriftgen*',
    'generated*',
    '.venv*',
    '.pipenv*',
]
ignore_missing_imports = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_no_return = true
#warn_return_any = true
warn_unreachable = true
strict = true
